// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates a default config 1`] = `
{
  "assemblies": [],
  "configuration": {},
  "connections": [],
  "defaultSession": {
    "name": "New Session",
  },
  "tracks": [],
}
`;

exports[`does not overwrite an existing config 1`] = `
{
  "assemblies": [
    {
      "name": "testAssembly",
      "sequence": {
        "adapter": {
          "twoBitLocation": {
            "locationType": "UriLocation",
            "uri": "test.2bit",
          },
          "type": "testSeqAdapter",
        },
        "trackId": "",
        "type": "testSequenceTrack",
      },
    },
  ],
  "configuration": {},
  "connections": [],
  "defaultSession": {
    "name": "New Session",
  },
  "tracks": [],
}
`;

exports[`throws an error with a negative port 1`] = `"-10 is not a valid port"`;

exports[`throws an error with a port greater than 65535 1`] = `"66666 is not a valid port"`;
